Sections 1-7 transferred; visibility bug fixed

--- a/docs/main.css
+++ b/docs/main.css
@@ -70,14 +70,14 @@ tr:nth-child(even) {
     background-color: #dddddd;
 }
 
-exercise {
+div.exercise {
     visibility: hidden;
 }
 
-notes {
+div.notes {
     visibility: hidden;
 }
 
-proof {
+ol.proof {
     visibility: hidden;
 }
